--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port: 8888
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/financedb
 spring.datasource.username=root
-spring.datasource.password=Sabari201@
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
 
